--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </div>
       <img id="conor" src="images/conor-removebg-preview.png" alt="">
       </div>
-      
+      <hr>
+      <h2 id="top_Brands">Shop From Top Brands</h2>
     <div class="slideshow-container">
       <div class="mySlides1 fade">
           <div class="slidesBrands">
@@ -150,28 +151,39 @@
       <a class="prev" onclick="plusSlidesThree(-1)">&#10094;</a>
       <a class="next" onclick="plusSlidesThree(1)">&#10095;</a>
     </div>
-
+    <hr>
     <div class="second-slider">
       <div>
-        <h1>UFC MALL</h1>
-        <h3>The One-Stop Destination for Fashion-Forward Indviduals</h3>
-        <p>Unleash Your Inner Fashion Icon With Our Curated Collection Of Over 100 Top Brands.Shop The Latest Looks From The World's Top Fashion Houses And Make A Statement With Every Step ....</p>
-      </div>
-      <img id="izzy" src="images/isrealFur-removebg-preview.png" alt="">
-      </div>
+        <h3>Interesting Fact :</h3>
+        <p>Francis Ngannou is known for being a knockout artist with punching power equivalent to 96 horsepower, or the equivalent of getting hit by a ford escort at top speed, but....</p>
+        <h3>You know WHAT'S MORE INTERESTING ?!!</h3>
+        <h1>OUR <span id="offer">50% OFF</span>  ON ALL OUR JEWELLERY</h1>
 
+      </div>
+      <img id="izzy" src="images/frnacis-removebg-preview.png" alt="">
+      </div>
+      <hr>
+      <h2 id="top_Brands">Amazing Offers On International Jewellery</h2>
       <div class="jewellery">
         <div>
           <img src="images/GinaJew.PNG" alt="">
+          <img class="logos" src="images/van.png" alt="">
+          <p class="logos_text">Van Cheef | 40% Off</p>
         </div>
         <div>
           <img src="images/colbyJew.PNG" alt="">
+          <img src="./images/tiff.PNG" alt="" class="logos">
+          <p class="logos_text">Tiffany & Co | 20% Cashback</p>
         </div>
         <div>
           <img src="images/RampageJew.PNG" alt="">
+          <img src="./images/Kalyan-Logo.jpg" alt="" class="logos">
+          <p class="logos_text">Kalyan Jewellers | 60% off Making Charge</p>
         </div>
         <div>
           <img src="images/IzzyJew.PNG" alt="">
+          <img src="./images/bug.PNG" alt="" class="logos">
+          <p class="logos_text">Buccellati Since 1919</p>
         </div>
       </div>
     <p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p><p>bssbbs</p>
