--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 </head>
 <body>
     <div class="nav">
+        <a href="index.html">
         <div>
         <img src="images/UFC_Logo.png" alt="">
-        <p>Mall</p>
-        </div>
+        <p>Mall</p> 
+      </div>
+    </a>
         <p>ULTIMATE FASHION COLLECTION</p>
         <div class="orderItems">
             <input type="text" name="" id="search">
             <input type="image" src="images/search.png" id="search_button">
-            <img src="images/checklist.png" alt="">
+            <div>
             <a href="myOrder.html">My Orders</a>
-            <img src="images/online-shopping.png" alt="">
-            <a href="myOrder.html">Bag</a>
-            <img src="images/online-shopping.png" alt="">
-            <a href="myOrder.html">Login</a>
+            <a href="bag.html">Bag</a>
+            <a href="login.html">Login</a>
+          </div>
         </div>
     </div>
     <div class="first-slider">
@@ -163,7 +164,7 @@
       <img id="izzy" src="images/frnacis-removebg-preview.png" alt="">
       </div>
       <hr>
-      <h2 id="top_Brands">Amazing Offers On International Jewellery</h2>
+      <!-- <h2 id="top_Brands">Amazing Offers On International Jewellery</h2>
       <div class="jewellery">
         <div>
           <img src="images/GinaJew.PNG" alt="">
@@ -186,6 +187,67 @@
           <p class="logos_text">Buccellati Since 1919</p>
         </div>
       </div>
+      <hr> -->
+      <h2 id="top_Brands">Grocery & Home Furnishing</h2>
+      <div class="grocery">
+        <div> <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498479/1613247367528.png?imwidth=414&impolicy=hq" alt="">
+        <h3>Big Bazaar</h3></div>
+        <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498482/1620737072141.png?imwidth=414&impolicy=hq" alt="">
+          <h3>Urban Ladder</h3>
+        </div>
+        <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498480/1620737097910.jpg?imwidth=414&impolicy=hq" alt="">
+          <h3>@home</h3>
+        </div>
+        <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/498484/1610566898069.jpg?imwidth=414&impolicy=hq" alt="">
+          <h3>More</h3>
+        </div>
+      </div>
+
+      <div class="jew">
+        <div> <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711188/1613028659969.png?imwidth=414&impolicy=hq" alt="">
+        <h3>Kalyan | Get 20% Cashback</h3></div>
+        <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711194/1620745874093.jpg?imwidth=414&impolicy=hq" alt="">
+          <h3>Jewelfina</h3>
+        </div>
+        <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711199/1613028660058.jpg?imwidth=414&impolicy=hq" alt="">
+          <h3>Tanisq</h3>
+        </div>
+        <div>
+          <img src="https://assetscdn1.paytm.com/images/catalog/view_item/711200/1620745456365.jpg?imwidth=414&impolicy=hq" alt="">
+          <h3>Up to 16% CashBack</h3>
+        </div>
+      </div>
+      <div class="about">
+        <h1>UFC Mall - India’s Leading Online Shopping Experience, Brought to You by UFC Mall</h1>
+        <p>Online shopping with UFC Mall is quick, convenient and trouble-free. You can shop for the desired product right from the comfort of your home and get them delivered straight to your doorstep.</p>
+        <p>Browse UFC Mall and get access to over 65 million products ranging from smartphones, tablets to laptops, sarees, kurtas & kurtis to t-shirts, sneakers, sport shoes to sandals, earrings, watches to fitness bands, chimneys, cookware to gas stoves, dairy products, baby products to makeup kits and many more.</p>
+        <h1>What are we offering on Ufcmall.com</h1>
+        <p>UFC Mall strives hard to make your online shopping a more pleasant and cost-effective experience by providing the top quality products at the best price rates in India. Our collection of products consist of electronic appliances, clothes, grocery, home and kitchen products, backpacks, automobiles, books and stationery, to name a few.
+        </p>
+        <p>The super value bazaar offers an extensive range of grocery products like daily food staples, ready to cook food, high on nutrition food, beauty, make-up, personal care, health, baby care products and many more. Also take a look at the latest Automobile section that consists of cars, bikes, scooters, sports bikes, accessories, riding gear and automotive care.
+        </p>
+        <h1>Benefits of shopping on UFC-mall.com</h1>
+        <p><strong> User-Friendly:</strong> Leading online shopping experience in India which is simple and faster to load. Shop on the go and get the products delivered in just a few easy clicks.
+
+        </p>
+        <p><strong>Safe & Secure Shopping</strong> You need not worry about your account credentials or personal details.</p>
+        <p><strong>Check Out Closely:</strong>View products of your choice in detail with clear images and thorough descriptions before buying.</p>
+        <p><strong>Multiple Payment Options:</strong>Choose a payment option of your choice i.e. Credit/Debit Cards, Netbanking and UPI.</p>
+        <p><strong>Paytm Postpaid Services:</strong>Now, you can buy today and pay next month with Paytm-ICICI Bank Postpaid.</p>
+        <p><strong>Order History: </strong> All your orders show up at one place, you can track them or repeat them with ease.</p>
+        <p><strong>24x7 Customer Care:</strong>For all your queries and concerns regarding your shopping orders, head over to paytmmall.com/care or call us at 01204606060 anytime</p>
+       </div>
+       <div class="help">
+        <img src="./images/help1.PNG" alt="">
+        <img src="./images/help2.PNG" alt="">
+        <img src="./images/help3.PNG" alt="">
+        <img src="./images/help4.PNG" alt="">
+       </div>
 </body>
 <script src="index.js"></script>
 </html>
