--- a/login.html
+++ b/login.html
@@ -4,22 +4,51 @@
   <title>Login</title>
   <style>
     /* CSS styles go here */
-
+    @font-face {
+    font-family: Klavika-bold-italic;
+    src: url(fonts/klavika-bold-italic.otf);
+}
+@font-face {
+    font-family: klavika-medium;
+    src: url(fonts/klavika-medium.otf);
+}
+@font-face {
+    font-family:klavika-bold ;
+    src: url(fonts/klavika-bold.otf);
+}
+body{
+  margin: 0;
+  padding: 0;
+}
 .container {
   display: flex;
   flex-direction: row;
+  background-color: #ECEFF1;
+  height: 100vh;
+  justify-content: space-evenly;
 }
-
+.container input{
+  border: none;
+  width: 60%;
+  height: 2rem;
+  
+}
+.container p{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.1rem;
+}
 h1 {
-  font-family: 'Klavika Bold';
+  font-family: 'klavika-bold';
 }
 
 .returning-customers {
   align-items: flex-start;
+  width: 40%;
 }
 
 .new-customers {
   align-items: flex-end;
+  width: 40%;
 }
 
 .login-button, .register-button {
@@ -27,28 +56,115 @@ h1 {
   color: white;
   font-size: 16px;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 20px;
   border: 0ch;
   transition: background-color 0.2s ease;
 }
-
+.login-button{
+  margin-top: 4%;
+}
 .login-button:hover, .register-button:hover {
   background-color: darkgrey;
+}
+.nav{
+    width: 100%;
+    padding-bottom: 2%;
+
+}
+.nav>div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0% 0 0 0;
+}
+.nav img{
+    width: 5%;
+    text-align: center;
+}
+.nav>div:nth-child(1)>p{
+    font-size: 2.5rem;
+    margin: 0 0 0 5px;
+    font-family: Klavika-bold-italic;
+}
+.nav>p{
+    margin: 0;
+    padding-top: 0;
+    font-family: klavika-medium;
+    font-size: 1rem;
+    text-align: center;
+}
+#search{
+    border: 1px solid rgb(190, 186, 186);
+    border-radius: 2px;
+    width: 50%;
+    height: 2rem;
+}
+#search_button{
+    width: 2rem;
+    margin-left: 1rem;
+}
+.orderItems{
+    margin-top:50px ;
+}
+.orderItems img{
+    width: 20px;
+ }
+.orderItems>img:nth-child(1){
+    width: 10px;
+} 
+.orderItems>div{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 7%;
+}
+.orderItems a{
+    font-family: klavika-medium;
+    font-weight: lighter;
+    color: black;
+    font-size: 20px;
+    /* margin-left: 10%; */
+}
+a{
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
   </style>
 </head>
 <body>
+  <div class="nav">
+    <div>
+    <img src="images/UFC_Logo.png" alt="">
+    <p>Mall</p>
+    </div>
+    <p>ULTIMATE FASHION COLLECTION</p>
+    <div class="orderItems">
+        
+        <input type="text" name="" id="search">
+        <input type="image" src="images/search.png" id="search_button">
+        <div>
+        <a href="myOrder.html">My Orders</a>
+        <a href="bag.html">Bag</a>
+        <a href="login.html">Login</a>
+      </div>
+    </div>
+</div>
   <div class="container">
     <div class="inner-div returning-customers">
       <h1>RETURNING CUSTOMERS</h1>
+      <p>Email Address</p>
       <input type="text">
+      <p>Password</p>
       <input type="text">
+      <br>
       <button class="login-button">LOGIN</button>
     </div>
     <div class="inner-div new-customers">
       <h1>NEW CUSTOMERS</h1>
-      <button class="register-button">REGISTER</button>
+      <a href=""><button class="register-button">REGISTER</button></a>
     </div>
   </div>
 </body>
