--- a/registration.html
+++ b/registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title>Register</title>
   <link rel="icon" href="https://cdn.shopify.com/s/files/1/0035/4274/5152/files/ufc-favicon_180x180_crop_center.png?v=1633911748" type="image/x-icon">
 
   <style>
@@ -23,15 +23,16 @@ body{
   padding: 0;
 }
 .container {
+  padding: 0 0 0 40%;  
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #ECEFF1;
   height: 100vh;
   justify-content: space-evenly;
 }
 .container input{
   border: none;
-  width: 60%;
+  width: 35%;
   height: 2rem;
   
 }
@@ -43,17 +44,7 @@ h1 {
   font-family: 'klavika-bold';
 }
 
-.returning-customers {
-  align-items: flex-start;
-  width: 40%;
-}
-
-.new-customers {
-  align-items: flex-end;
-  width: 40%;
-}
-
-.login-button, .register-button {
+.login-button {
   background-color: black;
   color: white;
   font-size: 16px;
@@ -61,11 +52,13 @@ h1 {
   border-radius: 20px;
   border: 0ch;
   transition: background-color 0.2s ease;
+  width: 20%;
+  margin: 9%;
 }
 .login-button{
   margin-top: 4%;
 }
-.login-button:hover, .register-button:hover {
+.login-button:hover{
   background-color: darkgrey;
 }
 .nav{
@@ -155,10 +148,10 @@ a{
 </a>
     <p>ULTIMATE FASHION COLLECTION</p>
     <div class="orderItems">
-      <div>
+        <div>
         <input type="text" name="" id="search" placeholder="   Search for a Product, Brand or Category">
         <input type="image" src="images/search.png" id="search_button">
-      </div>
+    </div>
         <div>
         <a href="myOrder.html">My Orders</a>
         <a href="bag.html">Bag</a>
@@ -167,49 +160,42 @@ a{
     </div>
 </div>
   <div class="container">
-    <div class="inner-div returning-customers">
-      <h1>RETURNING CUSTOMERS</h1>
+      <h1>CREATE ACCOUNT</h1>
+      <p>First Name</p>
+      <input type="text" id="first">
+      <p>Last Name</p>
+      <input type="text" id="last">
       <p>Email Address</p>
-      <input type="text" id="email">
+      <input type="email" id="email">
       <p>Password</p>
       <input type="text" id="pass">
-      <br>
+      <!-- <BR></BR> -->
       <button class="login-button">LOGIN</button>
-    </div>
-    <div class="inner-div new-customers">
-      <h1>NEW CUSTOMERS</h1>
-      <a href="registration.html"><button class="register-button">REGISTER</button></a>
     </div>
   </div>
 </body>
 </html>
 <script>
-  let emailEl = document.getElementById("email");
-  let passEl = document.getElementById("pass");
-  let btn = document.querySelector("button");
-  let loginLs = JSON.parse(localStorage.getItem("regLs"));
-  if(loginLs===null)
-  {
-    loginLs = [];
-  }
-  let flag=false;
-  btn.addEventListener("click",()=>{
-    loginLs.forEach((element)=>{
-    if(element.email===emailEl.value && element.pass===passEl.value)
+    let registerLS = JSON.parse(localStorage.getItem("regLs"));
+    if (registerLS===null)
     {
-      flag=true;
+        registerLS=[];
     }
-    
-  })
-  if(flag)
-  {
-    alert("Login SuccessFul");
-    location.href="index.html";
-  }
-  else
-  {
-    alert("Wrong Credentials");
-  }
-  })
-  
+    let firstEl = document.getElementById("first");
+    let lastEl = document.getElementById("last");
+    let emailEl = document.getElementById("email");
+    let passEl = document.getElementById("pass");
+    let btn = document.querySelector("button");
+    btn.addEventListener("click",()=>{
+        let registerData = {
+            first : firstEl.value,
+            last : lastEl.value,
+            email : emailEl.value,
+            pass : passEl.value
+        } 
+        registerLS.push(registerData);
+        localStorage.setItem("regLs",JSON.stringify(registerLS));
+        alert("Registration SUccessful")
+        location.href = "login.html";
+    })
 </script>
